--- a/NDKFilePatchTest/app/src/main/res/layout/activity_main.xml
+++ b/NDKFilePatchTest/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,20 @@
         android:id="@+id/btn_diff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="拆分"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_patch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="合并"
+        app:layout_constraintEnd_toEndOf="@+id/btn_diff"
+        app:layout_constraintStart_toStartOf="@+id/btn_diff"
+        app:layout_constraintTop_toBottomOf="@+id/btn_diff" />
 
 </android.support.constraint.ConstraintLayout>
