--- a/NDK_V2/MyWangyiPlayer/app/src/main/res/layout/activity_main.xml
+++ b/NDK_V2/MyWangyiPlayer/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,11 @@
         android:layout_width="match_parent"
         android:layout_height="50dp" />
 
+    <Button
+        android:text="toast"
+        android:onClick="toast"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
 </LinearLayout>
